Actualización de proyecto de aplicaciones informáticas

--- a/vistas/footer.html
+++ b/vistas/footer.html
@@ -4,7 +4,7 @@
         &copy;
         <script>
           document.write(new Date().getFullYear())
-        </script>, Todos los derechos reservados. Desarrollado por <a href="https://www.cacicustech.com" target="_blank">Cacicus Tech</a>.
+        </script>, Proyecto desarrollado para la materia de <a href="https://www.cacicustech.com" target="_blank">Aplicaciones informáticas</a>.
       </div>
     </div>
   </footer>
