--- a/vistas/login.html
+++ b/vistas/login.html
@@ -37,7 +37,7 @@
             <div class="card card-login">
               <form class="form" id="FrmIniciarSesion" onsubmit="return false" autocomplete="off">
                 <div class="card-header card-header-primary text-center">
-                  <h4 class="card-title">ICE CREAM</h4>
+                  <h4 class="card-title">INVENTARIO HELADERÍA</h4>
                 </div>
                 <p class="description text-center">Ingresa tus credenciales para iniciar sesión</p>
                 <div class="alert alert-danger _iniciar_sesion" role="alert" style="display: none"></div>
@@ -63,9 +63,9 @@
                 <div class="footer text-center">
                   <div class="row">
                     <div class="col-md-12">
-                      <p style="display: block;margin-bottom: -3px;"><small>© 2019 ROLL FACTORY. Todos los derechos reservados.</small></p>
+                      <p style="display: block;margin-bottom: -3px;"><small>© 2021 Apliaciones informáticas. Todos los derechos reservados.</small></p>
                       <p style="display: block;margin-bottom: 10px;"> <small>
-                        Desarrollado por <b><a href="https://cacicustech.com/" target="_blank"> CACICUSTECH</a>
+                        Proyecto de fin de ciclo <b>
                       </small></p>
                     </div>
                   </div>
