ocultación del menu reportes

--- a/vistas/header.html
+++ b/vistas/header.html
@@ -83,11 +83,11 @@
                 </a>
               </div>
             </li>
-            <li class="nav-item">
+<!--             <li class="nav-item">
             <a class="nav-link reportes" href="reportes">
               <i class="material-icons">bar_chart</i> Reportes
             </a>
-          </li>
+          </li> -->
           <?php } ?>
           
            <li class="dropdown nav-item">
