--- a/vistas/header.html
+++ b/vistas/header.html
@@ -67,11 +67,11 @@
               </a>
             </div>
           </li>
-          <li class="nav-item">
+<!--           <li class="nav-item">
             <a class="nav-link reportes" href="reportes">
               <i class="material-icons">bar_chart</i> Reportes
             </a>
-          </li>
+          </li> -->
           <?php }else{ ?>
             <li class="dropdown nav-item">
               <a href="#" class="dropdown-toggle nav-link configuraciones" data-toggle="dropdown">
