corrección de la factura

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@ array ("Manjar", 4, 0.50, 2.00),
  
     <table style="width:100%; font-size:14px;">
     <div style="text-align: center;">
-    <span><b>ROLL FACTORY ICE CREAM</b></span><br>
-    <span>MANTA - ECUADOR</span><br>
-    <span>DENIS PONCE MOREIRA</span><br>
-    <span>RUC: 1314207349001</span><br> 
-    <span>AV. FLAVIO REYES, FRENTE A MANICENTRO</span><br>
-    <span>0969934490</span>
+    <span><b>FCI ICE CREAM</b></span><br>
+    <span>PORTOVIEJO - ECUADOR</span><br>
+    <span>APLICACIONES INFORMÁTICAS</span><br>
+    <span>COMPROBANTE</span><br> 
+    <span>PROYECTO DE FIN DE CICLO</span><br>
+    <span></span>
     </div>
     <hr>
     <div style="text-align: left;">
