corrección de factura

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ array ("Manjar", 4, 0.50, 2.00),
     </tr>
     <tr>
        <td colspan="12" style="text-align: center;">
-          Roll Factory
+          Aplicaciones informáticos
         </td>
     </tr>
   </table>  
